Messages_en.properties completado
Se ha añadido traducción al fichero messages_en.properties

--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -1,1 +1,9 @@
 # This file is intentionally empty. Message look-ups will fall back to the default "messages.properties" file.
+welcome=Bienvenido
+required=es obligatorio
+notFound=no se ha encontrado
+duplicate=esta en uso
+nonNumeric=deben ser todos numricos
+duplicateFormSubmission=No se permite el envio de formularios duplicados
+typeMismatch.date=fecha invalida
+typeMismatch.birthDate=fecha invalida
