--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -7,3 +7,37 @@ nonNumeric=deben ser todos numricos
 duplicateFormSubmission=No se permite el envio de formularios duplicados
 typeMismatch.date=fecha invalida
 typeMismatch.birthDate=fecha invalida
+
+error= Ha ocurrido algo inesperado...
+name= Nombre
+specialities = Especialidades
+view.xml = Ver en XML
+view.json = Ver en JSON
+new = Nueva
+pet = Mascota
+pets = Mascotas
+vets = Veterinarios
+type = Tipo
+visit = Visitante
+owner = Propietario
+owners = Propietarios
+address = Dirección
+city = Ciudad
+telephone = Teléfono
+birthDate = Fecha de nacimiento
+date = Fecha
+description = Descripción
+add.pet = Añadir mascota
+update.pet = Actualizar mascota
+edit.pet = Editar mascota
+add.visit = Añadir visita
+edit.owner = Editar propietario
+add.owner = Añadir propietario
+update.owner = Actualizar propietario
+visit.date = Fecha visita
+pets.and.visits = Mascotas y visitas
+ownerInfo = Información del propietario
+find.owners = Buscar propietarios
+find.owner = Buscar propietario
+lastName = Apellidos 
+firstName = Nombre
