create vet feature

--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -41,3 +41,4 @@ find.owners = Buscar propietarios
 find.owner = Buscar propietario
 lastName = Apellidos 
 firstName = Nombre
+view.create= new vet
