--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -1,4 +1,5 @@
 # This file is intentionally empty. Message look-ups will fall back to the default "messages.properties" file.
+
 welcome=Bienvenido
 required=es obligatorio
 notFound=no se ha encontrado
@@ -42,3 +43,5 @@ find.owner = Buscar propietario
 lastName = Apellidos 
 firstName = Nombre
 view.create= new vet
+booking= Reserva
+add.booking = Añadir reserva
